# prediction-market-event-nostr-client

./: Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs
src/cli/: db.rs  information_stdin_prompts.rs  mod.rs  parser.rs  stdin_prompts.rs
src/cli/db/: mod.rs  table_text_json.rs
